# Detector_Caso---Helmet_Detector

./: 0.24.1  1.24.3  10.0.0  2.31.0  4.8.1.78  README.md  build_desktop.py  buildozer.spec  helmet_detector.py  pyproject.toml  requirements.txt  run_helmet_detector.bat  run_helmet_detector.sh  setup.py
